Mouse drag and click fixed

--- a/style.css
+++ b/style.css
@@ -43,13 +43,13 @@ header {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: 10px solid grey;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    /*grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);*/
 }
 
 
 .divs {
-    border-top: 1px solid grey;
-    border-left: 1px solid grey;
+    border-right: 1px solid grey;
+    border-bottom: 1px solid grey;
     box-sizing: border-box;
 }
