--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@ header {
 
 .settings {
     background-color: aqua;
-    flex: 1 1 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .canvas-main {
