--- a/style.css
+++ b/style.css
@@ -52,8 +52,18 @@ header {
 }
 
 
-.divs {
+.sqaure {
     border-right: 1px solid grey;
     border-bottom: 1px solid grey;
     box-sizing: border-box;
+}
+
+div p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.slidecontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
