Toggle Lines Added

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
 }
 
 
-.sqaure {
+.grid-lines {
     border-right: 1px solid grey;
     border-bottom: 1px solid grey;
     box-sizing: border-box;
