Added rainbow button and random hex generator

--- a/style.css
+++ b/style.css
@@ -13,16 +13,15 @@ header {
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
-    background-color: grey;
     padding: 15px;
 }
 
 .main-body {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .settings {
-    background-color: aqua;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -35,7 +34,6 @@ header {
 }
 
 .canvas-main {
-    background-color: darkgray;
     display: flex;
     flex: 1;
     justify-content: center;
@@ -49,7 +47,6 @@ header {
     min-width: 500px;
     margin: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border: 10px solid grey;
     display: grid;
     /*grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);*/
@@ -64,6 +61,7 @@ header {
 
 div p {
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 .slidecontainer {
