--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     box-sizing: border-box;
 }
 
-header {
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,6 +14,7 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
     padding: 15px;
+    background-color: rgb(0, 255, 255, 0.9);
 }
 
 .main-body {
@@ -85,5 +86,25 @@ input[type="color"] {
  }
  input[type="color"]::-webkit-color-swatch {
      border: none;
+ }
+
+ button {
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+ }
+
+ button:hover {
+    background-color: grey;
+    color: white;
+ }
+
+ .toggled {
+    background-color: grey;
+    color: white;
  }
 
